--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         <h1>Atul Gupta</h1>
         <p>
           I'm
-          <span class="typed" data-typed-items="a Python Developer, a Cloud Enthusiast, an Engineer"></span>
+          <span
+            class="typed"
+            data-typed-items="a Python Developer, a Cloud Enthusiast, an Engineer"
+          ></span>
         </p>
         <div class="social-links">
           <a
@@ -102,7 +105,8 @@
           ></a>
           <a
             href="https://www.youtube.com/@atulgupta-g/?sub_confirmation=1"
-            target="_blank" class="google-plus"
+            target="_blank"
+            class="google-plus"
             ><i class="bx bxl-youtube"></i
           ></a>
           <a
@@ -416,8 +420,8 @@
                     program registrations and a diversified client base.
                   </li>
                   <li>
-                    <b>Technology Used:</b> HTML, CSS, JavaScript, Bootstrap, GitHub, Azure
-                    StaticWebApp
+                    <b>Technology Used:</b> HTML, CSS, JavaScript, Bootstrap,
+                    GitHub, Azure StaticWebApp
                   </li>
                 </ul>
               </div>
@@ -459,8 +463,8 @@
 
             <div class="col-lg-8 mt-5 mt-lg-0">
               <form
-                action="forms/contact.php"
-                method="post"
+                action="https://formspree.io/f/xleqrrjq"
+                method="POST"
                 role="form"
                 class="php-email-form"
               >
