Updated index.html file

--- a/index.html
+++ b/index.html
@@ -81,40 +81,34 @@
           I'm
           <span
             class="typed"
-            data-typed-items="a Python Developer, a Cloud Enthusiast, an Engineer"
-          ></span>
-        </p>
-        <div class="social-links">
-          <a
-            href="https://twitter.com/atulgupta_g"
-            target="_blank"
-            class="twitter"
-            ><i class="bx bxl-twitter"></i
-          ></a>
-          <a
-            href="https://www.facebook.com/itsatulguptag/"
-            target="_blank"
-            class="facebook"
-            ><i class="bx bxl-facebook"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/itsatulguptag/"
-            target="_blank"
-            class="instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
-          <a
-            href="https://www.youtube.com/@atulgupta-g/?sub_confirmation=1"
-            target="_blank"
-            class="google-plus"
-            ><i class="bx bxl-youtube"></i
-          ></a>
-          <a
-            href="https://www.linkedin.com/in/atulguptag"
-            target="_blank"
-            class="linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
+            data-typed-items="a Python Django Developer, a Cloud Enthusiast"
+            ></span>
+          </p>
+          <div class="social-links">
+            <a
+              href="https://www.linkedin.com/in/atulguptag"
+              target="_blank"
+              class="linkedin"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/@atulgupta-g/?sub_confirmation=1"
+              target="_blank"
+              class="google-plus"
+              ><i class="bx bxl-youtube"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/itsatulguptag/"
+              target="_blank"
+              class="instagram"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+            <a
+              href="https://www.facebook.com/itsatulguptag/"
+              target="_blank"
+              class="facebook"
+              ><i class="bx bxl-facebook"></i
+            ></a>
         </div>
       </div>
     </section>
@@ -142,7 +136,7 @@
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3>Python Developer &amp; Cloud Enthusiast.</h3>
+              <h3>Python Dajngo Developer &amp; Cloud Enthusiast.</h3>
               <p class="fst-italic">
                 Any fool can write code that a computer can understand. Good
                 programmers write code that humans can understand. Sometimes it
@@ -154,7 +148,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Birthday:</strong> <span>23 March 2004</span>
+                      <strong>Birthday:</strong> <span>23rd March</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -222,12 +216,12 @@
           <div class="row skills-content">
             <div class="col-lg-6">
               <div class="progress">
-                <span class="skill">Python <i class="val">70%</i></span>
+                <span class="skill">Python / Django<i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="70"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -235,7 +229,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Bootstrap <i class="val">70%</i></span>
+                <span class="skill">HTML, CSS and JavaScript<i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -251,7 +245,7 @@
                 <span class="skill"
                   >Amazon Web Services (AWS) / Google Cloud Platform (GCP)<i
                     class="val"
-                    >80%</i
+                    >70%</i
                   ></span
                 >
                 <div class="progress-bar-wrap">
@@ -268,12 +262,12 @@
 
             <div class="col-lg-6">
               <div class="progress">
-                <span class="skill">HTML-CSS-JS <i class="val">50%</i></span>
+                <span class="skill">React Js <i class="val">30%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="50"
+                    aria-valuenow="30"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -281,25 +275,25 @@
               </div>
 
               <div class="progress">
-                <span class="skill">WordPress <i class="val">80%</i></span>
+                <span class="skill">SQL Database <i class="val">70%</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="70"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">GITS & GITHUB <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
                     aria-valuenow="80"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">GITS & GITHUB <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="90"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -354,9 +348,7 @@
                   >
                 </p>
                 <p>
-                  Qui deserunt veniam. Et sed aliquam labore tempore sed
-                  quisquam iusto autem sit. Ea vero voluptatum qui ut
-                  dignissimos deleniti nerada porti sand markend
+                  CGPA - 8.46
                 </p>
               </div>
               <div class="resume-item">
@@ -372,39 +364,33 @@
             <div class="col-lg-6">
               <h3 class="resume-title">Personal Projects</h3>
               <div class="resume-item">
-                <h4>Real Time Currency Converter</h4>
-                <h5>Feb. 2024 - March 2024</h5>
+                <a href = "https://djangoecommercewebsite.pythonanywhere.com/" target="_blank"><h4>Django e-Commerce Website</h4></a>
+                <h5>June 2024 - July 2024</h5>
                 <p><em>Bhopal, Madhya Pradesh, India </em></p>
                 <ul>
                   <li>
-                    Designed and developed a Django-based currency converter web
-                    application, ensuring optimized code structure and
-                    functionality
+                    Developed a comprehensive e-Commerce website using Django, featuring user authentication, product browsing, dynamic
+                    category filters, and robust security measures.
                   </li>
                   <li>
-                    Integrated real-time currency exchange rates from an
-                    external API, facilitating accurate currency conversions
-                    with the latest data.
+                    Engineered an advanced cart system with automated email notifications for account activation and order confirmations;
+                    boosted customer retention by 20% and increased repeat purchases by 15%.
                   </li>
                   <li>
-                    Created a user-friendly interface featuring dynamic drop
-                    down menus for currency selection, enhancing usability and
-                    delivering a seamless user experience.
+                    Implemented project deployment on PythonAnywhere, ensuring scalable infrastructure that managed 15,000+ daily
+                    transactions with a 25% improvement in load handling and 35% increase in processing speed
                   </li>
                   <li>
-                    Developed a currency converter web application utilizing
-                    Django framework, HTML, CSS, and JavaScript, with
-                    integration of real-time currency exchange rates through an
-                    external API.
+                    Utilized a tech stack including Python, HTML, CSS, JavaScript, and SQLite for full-stack development, delivering a
+                    seamless and user-friendly shopping experience.
                   </li>
                   <li>
-                    <b>Technologies Used:</b> HTML, CSS, JavaScript, Python,
-                    Django, Open-er-api, Git, AWS Console
+                    <b>Technologies Used:</b> Python, Django, Bootstrap, Git, GitHub, Google and Facebook OAuth
                   </li>
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Fitness Workout Club</h4>
+                <a href="https://atulguptag.github.io/FutureReadyTalent_project/" target="_blank"><h4>Fitness Workout Club</h4></a>
                 <h5>May 2022 - July 2022</h5>
                 <p><em>Bhopal, Madhya Pradesh, India</em></p>
                 <ul>
@@ -538,22 +524,10 @@
         </p>
         <div class="social-links">
           <a
-            href="https://twitter.com/atulgupta_g"
+            href="https://www.linkedin.com/in/atulguptag"
             target="_blank"
-            class="twitter"
-            ><i class="bx bxl-twitter"></i
-          ></a>
-          <a
-            href="https://www.facebook.com/itsatulguptag/"
-            target="_blank"
-            class="facebook"
-            ><i class="bx bxl-facebook"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/itsatulguptag/"
-            target="_blank"
-            class="instagram"
-            ><i class="bx bxl-instagram"></i
+            class="linkedin"
+            ><i class="bx bxl-linkedin"></i
           ></a>
           <a
             href="https://www.youtube.com/@atulgupta-g/?sub_confirmation=1"
@@ -562,14 +536,20 @@
             ><i class="bx bxl-youtube"></i
           ></a>
           <a
-            href="https://www.linkedin.com/in/atulguptag"
+            href="https://www.instagram.com/itsatulguptag/"
             target="_blank"
-            class="linkedin"
-            ><i class="bx bxl-linkedin"></i
+            class="instagram"
+            ><i class="bx bxl-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/itsatulguptag/"
+            target="_blank"
+            class="facebook"
+            ><i class="bx bxl-facebook"></i
           ></a>
         </div>
         <div class="copyright">
-          &copy; Copyright <strong><span>Atul Gupta</span></strong
+          &copy; Copyright <strong><span>2024</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
