--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">GITS & GITHUB <i class="val">80%</i></span>
+                <span class="skill">GIT & GITHUB <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
