Added dark mode functionality

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li>
+          <a href="#" id="dark-mode-toggle" class="nav-link scrollto"><i class="bx bx-moon"></i> <span>Dark
+              Mode</span></a>
+        </li>
+        <li>
           <a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
         </li>
         <li>
@@ -220,7 +224,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SQL / PostgreSQL / MongoDB <i class="val">70%</i></span>
+              <span class="skill">SQL / PostgreSQL <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -365,7 +369,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Experience Section ======= -->
-    <section id="experience" class="experience section-bg">
+    <section id="experience" class="experience">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title text-center">
@@ -376,49 +380,63 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <div class="experience-timeline">
-              <div class="timeline-item">
-                <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>Sept 2024 - Present</span>
-                </h4>
+            <div class="timeline-item">
+              <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>Sept 2024 - Present</span>
+              </h4>
 
-                <p><strong>Key Responsibilities:</strong></p>
-                <ul>
-                  <li>Developed and maintained web applications using <b>Python (Django) and React.js</b>,
-                    automating key
-                    processes like exam creation, admit card generation, and student ID card creation.</li>
-                  <li>Collaborated with cross-functional teams to design, develop, and deploy scalable applications,
-                    ensuring smooth integration of various features for improved efficiency.</li>
-                  <li>Enhanced internal systems, improving usability for teachers and administrators, leading to faster
-                    exam creation, quicker admit card processing, and simplified ID card generation.</li>
-                  <li>Automated the generation of admit cards and student ID cards, ensuring that all necessary student
-                    details were included and helping to streamline the administrative processes.</li>
-                  <li>Contributed to the testing and documentation of software processes to ensure the systems operated
-                    smoothly and the workflow was well-organized.</li>
-                  <li>Collaborated with teams to understand project needs, troubleshoot problems, and ensure all
-                    components of the system worked seamlessly together.</li>
-                </ul>
+              <p><strong>Key Responsibilities:</strong></p>
+              <ul>
+                <li>Developed and maintained web applications using <b>Python (Django) and React.js</b>,
+                  automating key
+                  processes like exam creation, admit card generation, and student ID card creation.</li>
+                <li>Collaborated with cross-functional teams to design, develop, and deploy scalable applications,
+                  ensuring smooth integration of various features for improved efficiency.</li>
+                <li>Enhanced internal systems, improving usability for teachers and administrators, leading to faster
+                  exam creation, quicker admit card processing, and simplified ID card generation.</li>
+                <li>Automated the generation of admit cards and student ID cards, ensuring that all necessary student
+                  details were included and helping to streamline the administrative processes.</li>
+                <li>Contributed to the testing and documentation of software processes to ensure the systems operated
+                  smoothly and the workflow was well-organized.</li>
+                <li>Collaborated with teams to understand project needs, troubleshoot problems, and ensure all
+                  components of the system worked seamlessly together.</li>
+                <li>Designed and implemented a <b>Social Auto Posting features especially LinkedIn auto-posting
+                    system</b> to
+                  schedule and share posts automatically on the company's page,
+                  ensuring regular updates and professional engagement on the platform.
+                </li>
+                <li>Integrated <b>AI-driven content generation</b> to create engaging topics, detailed write-ups, and
+                  concise
+                  key points, making content creation faster and more efficient.
+                </li>
+                <li>Worked closely with the team to align the system with the company's content strategy related to
+                  SaaS,
+                  making it easier to share key updates and announcements.
+                </li>
+              </ul>
 
-                <p><strong>Key Achievements:</strong></p>
-                <ul>
-                  <li>Successfully automated the exam generation process, resulting in significant time savings for
-                    teachers and an overall increase in productivity.</li>
-                  <li>Streamlined the admit card generation process, reducing the time spent on generating and
-                    distributing them to students, which helped improve overall efficiency.</li>
-                  <li>Developed an easy-to-use tool for creating student ID cards, simplifying the process for the
-                    school while ensuring that the ID cards included all necessary information.</li>
-                  <li>Improved internal tools to enhance user experience, enabling teachers and administrators to
-                    complete tasks quickly and effectively.</li>
-                  <li>Ensured on-time delivery of key projects, helping the company meet deadlines and deliver features
-                    that improved the company’s digital solutions.</li>
-                  <li>Contributed to increasing the company’s visibility and attracting more clients by streamlining
-                    administrative processes, boosting both sales and company value.</li>
-                </ul>
-                <p><strong>Additional Impact:</strong></p>
-                <li>Contributed to a <b>20%</b> increase in overall company profits by improving operational efficiency
-                  and
-                  customer satisfaction.</li>
-              </div>
-
+              <p><strong>Key Achievements:</strong></p>
+              <ul>
+                <li>Successfully automated the exam generation process, resulting in significant time savings for
+                  teachers and an overall increase in productivity.</li>
+                <li>Streamlined the admit card generation process, reducing the time spent on generating and
+                  distributing them to students, which helped improve overall efficiency.</li>
+                <li>Developed an easy-to-use tool for creating student ID cards, simplifying the process for the
+                  school while ensuring that the ID cards included all necessary information.</li>
+                <li>Successfully launched the <b>LinkedIn auto-posting tool</b>, which led to a <b>15% increase in
+                    engagement</b>
+                  with posts and a stronger online presence.
+                </li>
+                <li>Used AI to generate compelling topics and their detailed content, Summarizing each into 5 main key
+                  points for easy consumption and effective messaging.
+                </li>
+              </ul>
+              <p><strong>Additional Impact:</strong></p>
+              <li>Contributed to a <b>20% increase</b> in overall company profits by improving operational efficiency
+                and
+                customer satisfaction.</li>
+              <li>Helped the team focus on strategic initiatives by reducing the manual effort involved in social
+                media management and content generation.
+              </li>
             </div>
           </div>
         </div>
