Updated project description

--- a/index.html
+++ b/index.html
@@ -306,24 +306,21 @@
               <p><em>Bhopal, Madhya Pradesh, India </em></p>
               <ul>
                 <li>
-                  Developed a comprehensive e-Commerce website using Django, featuring user authentication, product
-                  browsing, dynamic
-                  category filters, and robust security measures.
+                  Built a robust e-commerce platform using Python Django that incorporated secure user authentication,
+                  email verification for new accounts, and OAuth integration with Google/Facebook.
                 </li>
                 <li>
-                  Engineered an advanced cart system with automated email notifications for account activation and order
-                  confirmations;
-                  boosted customer retention by 20% and increased repeat purchases by 15%.
+                  Designed an essential e-commerce functionalities, including product browsing, category filters, and an
+                  advanced cart systems which improved user experience and engagement.
                 </li>
                 <li>
-                  Implemented project deployment on PythonAnywhere, ensuring scalable infrastructure that managed
-                  15,000+ daily
-                  transactions with a 25% improvement in load handling and 35% increase in processing speed
+                  Established a live deployment of the project on PythonAnywhere, featuring seamless integration with
+                  existing systems; enhanced user experience for 10+ testers, contributing to a more robust final
+                  product.
                 </li>
                 <li>
-                  Utilized a tech stack including Python, HTML, CSS, JavaScript, and SQLite for full-stack development,
-                  delivering a
-                  seamless and user-friendly shopping experience.
+                  Utilized a full-stack tech, including Python, HTML, CSS, JavaScript, and SQLite, optimizing the user
+                  interface for seamless browsing and purchase flow across devices.
                 </li>
                 <li>
                   <b>Technologies Used:</b> Python, Django, Bootstrap, Git, GitHub, Google and Facebook OAuth
