Updated experience month

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="timeline-item">
-              <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>Sept 2024 - Present</span>
+              <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>June 2024 - December 2024</span>
               </h4>
 
               <p><strong>Key Responsibilities:</strong></p>
