Added new project and updated portfolio

--- a/index.html
+++ b/index.html
@@ -295,15 +295,50 @@
                 technicals and theoritical as well as practical knowledge.
               </p>
             </div>
+            <h3 class="resume-title">Hobbies & Interests</h3>
+            <div class="resume-item">
+              <p><em>Passions that keep me inspired and energized</em></p>
+              <ul class="hobbies-list">
+                <li>🏸 Playing Badminton</li>
+                <li>🎧 Listening to Music</li>
+                <li>🎬 Watching Movies</li>
+                <li>💻 Coding & Problem-Solving</li>
+              </ul>
+            </div>
+
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Personal Projects</h3>
+            <div class="resume-item">
+              <a href="https://jokemaster-go.netlify.app/" target="_blank">
+                <h4>AI-Powered Joke Generator</h4>
+              </a>
+              <h5>Jan. 10 2025 - Jan. 30 2025</h5>
+              <ul>
+                <li>
+                  Developed a full-stack joke generator web application using React for the frontend and Go with the Gin
+                  framework for the backend.
+                </li>
+                <li>
+                  Integrated Google OAuth 2.0 for secure user authentication and implemented JWT-based session
+                  management.
+                </li>
+                <li>
+                  Designed and deployed RESTful APIs to handle joke creation, retrieval, and manage user-specific joke
+                  histories.
+                </li>
+                <li>
+                  Configured continuous deployment to Google App Engine, enabling automatic deployment whenever code
+                  is pushed to the GitHub repository.
+                </li>
+              </ul>
+            </div>
+
             <div class="resume-item">
               <a href="https://djangoecommercewebsite.pythonanywhere.com/" target="_blank">
                 <h4>Django e-Commerce Website</h4>
               </a>
               <h5>June 2024 - July 2024</h5>
-              <p><em>Bhopal, Madhya Pradesh, India </em></p>
               <ul>
                 <li>
                   Built a robust e-commerce platform using Python Django that incorporated secure user authentication,
@@ -322,9 +357,6 @@
                   Utilized a full-stack tech, including Python, HTML, CSS, JavaScript, and SQLite, optimizing the user
                   interface for seamless browsing and purchase flow across devices.
                 </li>
-                <li>
-                  <b>Technologies Used:</b> Python, Django, Bootstrap, Git, GitHub, Google and Facebook OAuth
-                </li>
               </ul>
             </div>
 
@@ -333,7 +365,6 @@
                 <h4>User Authentication Using React and Django</h4>
               </a>
               <h5>October 2023 - November 2023</h5>
-              <p><em>Bhopal, Madhya Pradesh, India</em></p>
               <ul>
                 <li>
                   Developed a robust full-stack web application for user authentication using React for the frontend
@@ -352,10 +383,6 @@
                 <li>
                   Developed a password reset functionality with email verification to help users recover their
                   accounts securely and effortlessly.
-                </li>
-                <li>
-                  <b>Technology Used:</b> React, Django, Django REST Framework, JWT, Bootstrap, PostgreSQL
-                  (development), React Router, GitHub (for version control)
                 </li>
               </ul>
             </div>
@@ -378,7 +405,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="timeline-item">
-              <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>June 2024 - December 2024</span>
+              <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>June 2024 - December
+                  2024</span>
               </h4>
 
               <p><strong>Key Responsibilities:</strong></p>
@@ -459,7 +487,7 @@
               <div class="icon">
                 <i class="bx bx-code-alt"></i>
               </div>
-              <h4><a href="">Full-Stack Development</a></h4>
+              <h4>Full-Stack Development</h4>
               <p>End-to-end development across front-end and back-end, creating responsive and dynamic web applications
                 tailored to your business needs.</p>
             </div>
@@ -471,7 +499,7 @@
               <div class="icon">
                 <i class="bx bx-data"></i>
               </div>
-              <h4><a href="">Database Design & Management</a></h4>
+              <h4>Database Design & Management</h4>
               <p>Optimized and scalable database solutions, including SQL and NoSQL, to store and manage data
                 effectively and securely.</p>
             </div>
@@ -483,7 +511,7 @@
               <div class="icon">
                 <i class="bx bx-shield"></i>
               </div>
-              <h4><a href="">API Development & Integration</a></h4>
+              <h4>API Development & Integration</h4>
               <p>Building and integrating RESTful APIs for seamless communication between different software components
                 and third-party services.</p>
             </div>
@@ -494,7 +522,7 @@
               <div class="icon">
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">UI/UX Design & Development</a></h4>
+              <h4>UI/UX Design & Development</h4>
               <p>Creating intuitive, user-friendly interfaces with attention to detail, ensuring a smooth and enjoyable
                 user experience across all devices.</p>
             </div>
@@ -505,7 +533,7 @@
               <div class="icon">
                 <i class="bx bx-server"></i>
               </div>
-              <h4><a href="">Cloud Integration & Deployment</a></h4>
+              <h4>Cloud Integration & Deployment</h4>
               <p>Deploying and managing applications on cloud platforms like AWS and Google Cloud, ensuring scalability,
                 reliability, and performance.</p>
             </div>
@@ -516,7 +544,7 @@
               <div class="icon">
                 <i class="bx bx-code-alt"></i>
               </div>
-              <h4><a href="">Code Review & Optimization</a></h4>
+              <h4>Code Review & Optimization</h4>
               <p>Improving code quality and performance through detailed review and optimization, ensuring maintainable,
                 efficient, and robust solutions.</p>
             </div>
@@ -575,13 +603,13 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              </div>
-              <div class="d-flex justify-content-center mt-3 rounded">
-                <button type="submit" class="btn btn-primary">Send Message</button>
-              </div>
-            </form>
           </div>
+          <div class="d-flex justify-content-center items-align-center mt-3 rounded">
+            <button type="submit" class="btn btn-primary">Send Message</button>
+          </div>
+          </form>
         </div>
+      </div>
       </div>
     </section>
     <!-- End Contact Section -->
@@ -607,10 +635,10 @@
             class="bx bxl-facebook"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>2025</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by
+        Designed and Developed 💛 by
         <a href="https://www.linkedin.com/in/atulguptag/">Atul Gupta</a>
       </div>
     </div>
